# phantomdb

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BUILD_ENVIRONMENT_RESOLUTION.md  BUILD_RESOLUTION_CONFIRMATION.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  DELETE_IMPLEMENTATION_SUMMARY.md  DELETE_IMPLEMENTATION_VERIFICATION.md  DML_IMPLEMENTATION_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FINAL_BUILD_VERIFICATION.md  FINAL_ENHANCEMENT_SUMMARY.md  FINAL_PHANTOMDB_PROJECT_COMPLETION.md  FINAL_PROJECT_COMPLETION_REPORT.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  PHANTOMDB_BUILD_COMPLETION_SUMMARY.md  PHANTOMDB_BUILD_ENVIRONMENT_RESOLVED.md  PHANTOMDB_BUILD_ISSUE_RESOLVED.md  PHANTOMDB_COMPLETE_FEATURE_SET.md  PHANTOMDB_ENHANCEMENT_COMPLETION.md  PHANTOMDB_FINAL_COMPLETION_REPORT.md  PHANTOMDB_FINAL_SUMMARY.md  PHANTOMDB_FINAL_VERIFICATION.md  PHANTOMDB_GAP_CLOSING_SUMMARY.md  PHANTOMDB_GIT_UPDATE_CONFIRMATION.md  PHANTOMDB_MISSION_ACCOMPLISHED.md  PHANTOMDB_PROJECT_COMPLETION_CERTIFICATE.md  PHANTOMDB_PROJECT_COMPLETION_CONFIRMATION.md  PHANTOMDB_PROJECT_COMPLETION_FINAL_CONFIRMATION.md  PHANTOMDB_SUCCESSFUL_BUILD_AND_EXECUTION.md  PHANTOMDB_VERIFICATION_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION_PLAN.md  PROJECT_ACCOMPLISHMENTS_SUMMARY.md  PROJECT_BUILD_VERIFICATION.md  (+61 more)
benchmarks/: CMakeLists.txt  benchmark_runner.cpp  benchmark_runner.h  benchmark_visualizer.py  core_benchmarks.cpp  run_benchmarks.bat  run_benchmarks.sh
src/api/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  api.vcxproj  api.vcxproj.filters  cmake_install.cmake  database_manager.cpp  database_manager.h  openapi.yaml  rest_api.cpp  rest_api.h  rest_api_test.cpp  rest_server_main.cpp  simple_rest_api.cpp  simple_rest_api.h  simple_rest_server.vcxproj  simple_rest_server.vcxproj.filters  simple_rest_server_main.cpp
src/audit/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  audit.vcxproj  audit.vcxproj.filters  audit_logger.cpp  audit_logger.h  audit_test.cpp  audit_test.vcxproj  audit_test.vcxproj.filters  cmake_install.cmake  db_audit_test.cpp  db_audit_test.vcxproj  db_audit_test.vcxproj.filters
src/clients/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  POOLING.md  README.md  __init__.py  cmake_install.cmake  example.py  phantomdb.py  pool.py  setup.py  test_phantomdb.py
src/core/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  comprehensive_test.cpp  comprehensive_test.vcxproj  comprehensive_test.vcxproj.filters  core.cpp  core.h  core.vcxproj  core.vcxproj.filters  coverage_test.cpp  coverage_test.vcxproj  coverage_test.vcxproj.filters  database.cpp  database.h  enhanced_persistence.cpp  enhanced_persistence.h  persistence.cpp  persistence.h  query_executor.cpp  query_executor.h  test_enhanced_database.cpp  test_enhanced_database.vcxproj  test_enhanced_database.vcxproj.filters  test_enhanced_persistence.cpp  test_enhanced_persistence.vcxproj  test_enhanced_persistence.vcxproj.filters  test_persistence.cpp  test_persistence.vcxproj  test_persistence.vcxproj.filters  test_query_executor.cpp  test_query_executor.vcxproj  test_query_executor.vcxproj.filters  type_validation_test.cpp  type_validation_test.vcxproj  type_validation_test.vcxproj.filters  utils.cpp  (+1 more)
src/distributed/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cluster_manager.cpp  cluster_manager.h  cluster_test.cpp  cluster_test.vcxproj  cluster_test.vcxproj.filters  cmake_install.cmake  comprehensive_test.cpp  conflict_resolver.cpp  conflict_resolver.h  consensus_manager.cpp  consensus_manager.h  consensus_test.cpp  consensus_test.vcxproj  consensus_test.vcxproj.filters  cross_shard_query.cpp  cross_shard_query.h  data_rebalancer.cpp  data_rebalancer.h  distributed.vcxproj  distributed.vcxproj.filters  distributed_comprehensive_test.vcxproj  distributed_comprehensive_test.vcxproj.filters  distributed_integration_test.vcxproj  distributed_integration_test.vcxproj.filters  distributed_performance_test.vcxproj  distributed_performance_test.vcxproj.filters  distributed_transaction_manager.cpp  distributed_transaction_manager.h  distributed_transaction_test.cpp  distributed_transaction_test.vcxproj  distributed_transaction_test.vcxproj.filters  elastic_scaling_manager.cpp  elastic_scaling_manager.h  elastic_scaling_test.cpp  elastic_scaling_test.vcxproj  (+23 more)
src/error/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  cmake_install.cmake  error.vcxproj  error.vcxproj.filters  error_handler.cpp  error_handler.h  error_test.cpp  example.cpp
src/import_export/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  data_exporter.cpp  data_exporter.h  data_importer.cpp  data_importer.h  import_export.vcxproj  import_export.vcxproj.filters  import_export_test.cpp
src/observability/: CMakeLists.test  CMakeLists.txt  init.cpp  init.h  observability.cpp  observability.h  test_observability.cpp
src/plugin/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PLUGIN_INTERFACE.md  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  base_plugin.cpp  base_plugin.h  cmake_install.cmake  example_plugin.cpp  example_plugin.h  plugin.vcxproj  plugin.vcxproj.filters  plugin_manager.cpp  plugin_manager.h  plugin_test.cpp  test_plugin_interface.cpp
src/query/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  delete_execution_test.cpp  delete_execution_test.vcxproj  delete_execution_test.vcxproj.filters  delete_plan_test.cpp  delete_plan_test.vcxproj  delete_plan_test.vcxproj.filters  (+86 more)
tests/: CMakeLists.txt  core_tests.cpp  test_subquery_execution.cpp  test_subquery_functionality.cpp  test_subquery_parsing.cpp  test_subquery_planning.cpp
(+916 files in other folders)
