[package]
name = "phantomdb-diesel"
version = "1.0.0"
edition = "2021"
authors = ["PhantomDB Team <phantomdb@example.com>"]
description = "Diesel ORM integration for PhantomDB"
license = "MIT"
repository = "https://github.com/PhantomDB/phantomdb"
keywords = ["phantomdb", "diesel", "orm", "database"]
categories = ["database"]

[dependencies]
diesel = { version = "2.0", features = ["postgres"] }
phantomdb-rust = { path = "../../clients/rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []